Nav bar and hero section with css

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>My Personal Site</title>
+    <title>Personal Website</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <script src="script.js"></script>
+    <section class="hero">
+        <nav>
+            <div>LOGO</div>
+            <ul>
+                <li>About me</li>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <div class="hero-text">  
+            <h1>Matt Herzog</h1>
+            <p>Software Engineer Student at Flatiron School</p></div>
+    </section>
+    <section></section>
+    <section></section>
+    <footer></footer>
+
+    
+<script src="script.js"></script>
 </body>
 </html>
