--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <title>Personal Website</title>
 </head>
 <body>
@@ -19,7 +22,9 @@
         </nav>
         <div class="hero-text">  
             <h1>Matt Herzog</h1>
-            <p>Software Engineer Student at Flatiron School</p></div>
+            <p>Software Engineer Student at Flatiron School</p>
+        <div class="button">About Me</div>
+    </div>
     </section>
     <section></section>
     <section></section>
