added projects section & headshot of myself

--- a/index.html
+++ b/index.html
@@ -33,8 +33,36 @@
         </div>
     </div>
     </section>
-    <section></section>
-    <section></section>
+    <section class="sub-section">
+        <div class="information">
+            <h2>About Me</h2>
+            <p>Hey there! My name is Matt Herzog. I am a software engineer student at Flatiron School.</p>
+        </div>
+        <div class="headshot-container">
+            <img class="headshot" src="src/images/IMG_5587.JPG" alt="Matt Herzog headshot"/>
+        </div>
+    </section>
+    <section class="sub-section-alternative">
+        <h2>Projects</h2>
+        <div class="project-container">
+            <div class="project-card">
+                <img class="project-image" src="src/images/Screen Shot 2022-06-20 at 2.19.56 AM.png" alt="Calculator application"> 
+            <h3>Calculator App</h3>
+            <p class="subtext">Utilized HTML, CSS, and Vanilla JavaScript to enable the application to complete the requested math expressions.</p>
+            <hr/>
+            <p class="subtext">View here</p>
+        </div>
+            <div class="project-card">
+                <img class="project-image" src="src/images/Screen Shot 2022-06-20 at 2.28.48 AM.png" alt="ToDo List application">
+                <h3>
+                    
+                    ToDo List App</h3>
+            <p class="subtext">Project focused on JavaScript fundamentals while also utilizing HTML & CSS.</p>
+            <hr/>
+            <p class="subtext">View here</p>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 
     
