finished site june 20 22

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="hero">
         <nav>
             <img class="logo" src="src/images/My project (1).png" alt="logo"/>
-            <ul>
+            <ul id="nav-list">
                 <li><a href="#about-me">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -57,9 +57,9 @@
             <p class="subtext"><a class="project-link" href="https://mherzog4.github.io/Calculator-App/" alt="Live demo for Calculator">View here</a></p>
         </div>
             <div class="project-card">
-                <img class="project-image" src="src/images/Screen Shot 2022-06-20 at 2.28.48 AM.png" alt="ToDo List application">
+                <img class="project-image" src="src/images/Screen Shot 2022-06-20 at 2.29.55 AM.png" alt="ToDo List application">
                 <h3>ToDo List App</h3>
-            <p class="subtext">Project focused on JavaScript fundamentals while also utilizing HTML & CSS.</p>
+            <p class="subtext">Utilized HTML, CSS, and Vanilla JavaScript to enable the application to list the most important tasks at the top of the list, and the least important tasks at the bottom.</p>
             <hr/>
             <p class="subtext"><a class="project-link" href="https://mherzog4.github.io/ToDoList/" alt="Live demo for ToDo List">View here</a></p>
             </div>
