--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="hero-area">
             <div class="hero-text">  
                 <h1>Matt Herzog</h1>
-                <p>Software Engineer Student at Flatiron School</p>
+                <p>Software Engineering Student at Flatiron School</p>
             <div class="button"><a href="#about-me">About me</a></div>
         </div>
         <div class="socials">
@@ -54,15 +54,16 @@
             <h3>Calculator App</h3>
             <p class="subtext">Utilized HTML, CSS, and Vanilla JavaScript to enable the application to complete the requested math expressions.</p>
             <hr/>
-            <p class="subtext"><a class="project-link" href="https://mherzog4.github.io/Calculator-App/" alt="Live demo for Calculator">View here</a></p>
+            <p class="subtext"><a class="project-link" href="https://mherzog4.github.io/Calculator-App/" target="_blank" alt="Live demo for Calculator">Live demo</a></p>
         </div>
             <div class="project-card">
                 <img class="project-image" src="src/images/Screen Shot 2022-06-20 at 2.29.55 AM.png" alt="ToDo List application">
                 <h3>ToDo List App</h3>
             <p class="subtext">Utilized HTML, CSS, and Vanilla JavaScript to enable the application to list the most important tasks at the top of the list, and the least important tasks at the bottom.</p>
             <hr/>
-            <p class="subtext"><a class="project-link" href="https://mherzog4.github.io/ToDoList/" alt="Live demo for ToDo List">View here</a></p>
+            <p class="subtext"><a class="project-link" href="https://mherzog4.github.io/ToDoList/" target="_blank" alt="Live demo for ToDo List">Live demo</a></p>
             </div>
+        </div>
         </div>
     </section>
     <footer id="contact">
