added calendly, substack, and typeform contact me page

--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
         <div class="information">
             <h2>About Me</h2>
             <p>Hey there! My name is Matt Herzog. I am a software engineer student at Flatiron School.</p>
-        </div>
+         </div>
         <div class="headshot-container">
             <img class="headshot" src="src/images/IMG_5587.JPG" alt="Matt Herzog headshot"/>
+        </div>
+    </section>
+    <section>
+        <iframe src="https://mattherzog.substack.com/embed" width="100%" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
         </div>
     </section>
     <section class="sub-section-alternative" id="projects">
@@ -67,8 +71,12 @@
         </div>
     </section>
     <footer id="contact">
-    <h2>Contact me</h2>
-    <p>matt@mattherzog.me</p>
+        <button data-tf-popup="YfwRgNpW" data-tf-iframe-props="title=Website intake form" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0db7ed;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;cursor:pointer;">Contact me</button><script src="//embed.typeform.com/next/embed.js"></script>
+    <!-- Calendly badge widget begin -->
+<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/mherzog3/15min', text: 'Click here to set up a time to chat!', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
+<!-- Calendly badge widget end -->
 </footer>
 <script src="src/script.js"></script>
 </body>
