--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             <div class="hero-text">  
                 <h1>Matt Herzog</h1>
                 <p>Software Engineering Student at Flatiron School</p>
-            <div class="button"><a href="#about-me">About me</a></div>
+            <div class="button"><!-- Calendly link widget begin -->
+                <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+                <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+                <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/mherzog3/15min'});return false;">Let&#39;s chat!</a>
+                <!-- Calendly link widget end --></div>
         </div>
         <div class="socials">
            <div> <a href="https://www.linkedin.com/in/matthewherzog3/" target="_blank" class="social"><svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M4.98 3.5c0 1.381-1.11 2.5-2.48 2.5s-2.48-1.119-2.48-2.5c0-1.38 1.11-2.5 2.48-2.5s2.48 1.12 2.48 2.5zm.02 4.5h-5v16h5v-16zm7.982 0h-4.968v16h4.969v-8.399c0-4.67 6.029-5.052 6.029 0v8.399h4.988v-10.131c0-7.88-8.922-7.593-11.018-3.714v-2.155z"/></svg></a></div>
@@ -72,11 +76,6 @@
     </section>
     <footer id="contact">
         <button data-tf-popup="YfwRgNpW" data-tf-iframe-props="title=Website intake form" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0db7ed;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;cursor:pointer;">Contact me</button><script src="//embed.typeform.com/next/embed.js"></script>
-    <!-- Calendly badge widget begin -->
-<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script type="text/javascript">window.onload = function() { Calendly.initBadgeWidget({ url: 'https://calendly.com/mherzog3/15min', text: 'Click here to set up a time to chat!', color: '#0069ff', textColor: '#ffffff', branding: true }); }</script>
-<!-- Calendly badge widget end -->
 </footer>
 <script src="src/script.js"></script>
 </body>
