fixed typeform contact form issue

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
     </section>
     <footer id="contact">
-        <button data-tf-popup="YfwRgNpW" data-tf-iframe-props="title=Website intake form" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0db7ed;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;cursor:pointer;">Contact me</button><script src="//embed.typeform.com/next/embed.js"></script>
+        <button data-tf-popup="YfwRgNpW" data-tf-iframe-props="title=Website intake form" data-tf-medium="snippet" style="all:unset;font-family:Helvetica,Arial,sans-serif;display:inline-block;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;background-color:#0db7ed;;color:#FFFFFF;font-size:20px;border-radius:25px;padding:0 33px;font-weight:bold;height:50px;cursor:pointer;line-height:50px;text-align:center;margin:0;text-decoration:none;">Contact me</button><script src="//embed.typeform.com/next/embed.js"></script>
 </footer>
 <script src="src/script.js"></script>
 </body>
