--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section class="sub-section" id="about-me">
         <div class="information">
             <h2>About Me</h2>
-            <p>Hey there! My name is Matt Herzog. I am a software engineer student at Flatiron School.</p>
+            <p>Hey there! My name is Matt Herzog. I am a software engineering student at Flatiron School.</p>
          </div>
         <div class="headshot-container">
             <img class="headshot" src="src/images/IMG_5587.JPG" alt="Matt Herzog headshot"/>
