--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <nav>
             <img class="logo" src="src/images/My project (1).png" alt="logo"/>
             <ul id="nav-list">
-                <li><a href="#about-me">About me</a></li>
+                <li><a href="#about-me">About</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="src/images/Matt_Herzog_Resume.pdf"target="_blank">Resume</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
             <button class="hamburger" id="hamburger">
